// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CareersSection > renders default as expected 1`] = `
<div>
  <section
    class="section section-body careers-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative ml-[-0.08em] bluedot-h2"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="invisible relative bottom-48"
        id="open-roles-anchor"
      />
      <div
        class="careers-section__container flex flex-col gap-8"
      >
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              Software Engineering Contractor
            </strong>
            <p
              class="bluedot-p careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="bluedot-p careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-rac=""
              href="/join-us/swe-contractor"
              tabindex="0"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <svg
                  class="cta-button__chevron-icon size-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                  />
                </svg>
              </span>
            </a>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="careers-section__card--desktop w-full flex flex-row items-center justify-between p-8 container-lined"
          >
            <strong
              class="careers-section__title basis-[33%]"
            >
              AI Safety Teaching Fellow
            </strong>
            <p
              class="bluedot-p careers-section__location"
            >
              London, Remote
            </p>
            <p
              class="bluedot-p careers-section__type"
            >
              Permanent
            </p>
            <a
              class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter careers-section__cta-button"
              data-rac=""
              href="/join-us/ai-safety-teaching-fellow"
              tabindex="0"
            >
              <span
                class="cta-button__text"
              >
                Apply now
              </span>
              <span
                class="cta-button__chevron ml-3"
              >
                <svg
                  class="cta-button__chevron-icon size-2"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
                  />
                </svg>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`CareersSection > renders mobile as expected 1`] = `
<div>
  <section
    class="section section-body careers-section"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative ml-[-0.08em] bluedot-h2"
        >
          Careers at BlueDot Impact
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="invisible relative bottom-48"
        id="open-roles-anchor"
      />
      <div
        class="careers-section__container flex flex-col gap-8"
      >
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  Software Engineering Contractor
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-rac=""
                  href="/join-us/swe-contractor"
                  tabindex="0"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="careers-section__listing"
        >
          <div
            class="card flex flex-col items-start transition-transform duration-200 careers-section__card--mobile container-lined p-6 max-w-full"
          >
            <div
              class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
            >
              <div
                class="card__text"
              >
                <p
                  class="card__title bluedot-h4 mb-2"
                >
                  AI Safety Teaching Fellow
                </p>
                <p
                  class="card__subtitle bluedot-p "
                >
                  London, Remote • Permanent
                </p>
              </div>
              <div
                class="card__bottom-section flex flex-col gap-space-between"
              >
                <a
                  class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                  data-rac=""
                  href="/join-us/ai-safety-teaching-fellow"
                  tabindex="0"
                >
                  <span
                    class="cta-button__text"
                  >
                    Apply now
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
